<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Txt_seleccionar_imagen"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="2">

        <!--Galería-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/galeria" />

            <Button
                android:id="@+id/Btn_abrir_galeria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/Btn_abrir_galeria" />

        </LinearLayout>

        <!--Cámara-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/camara" />

            <Button
                android:id="@+id/Btn_abrir_camara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/Btn_abrir_camara" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>